@@ -197,7 +197,7 @@ namespace scene
 
 		// returns the absolute transformation for a special MD3 Tag if the mesh is a md3 mesh,
 		// or the absolutetransformation if it's a normal scenenode
-		virtual const SMD3QuaterionTag& getAbsoluteTransformation( const core::stringc & tagname) = 0;
+		virtual const SMD3QuaterionTag& getMD3TagTransformation( const core::stringc & tagname) = 0;
 
 	};
 
